:sparkles: Added key attribute and nullable fields to models, created DB...

--- a/TeamAlumniNETBackend/appsettings.json
+++ b/TeamAlumniNETBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-SQ77T5G\\SQLEXPRESS; Initial Catalog=AlumniDB; Integrated Security=True; TrustServerCertificate=True"
+  }
 }
