:lock: Added keycloak authentication.

--- a/TeamAlumniNETBackend/TeamAlumniNETBackend.csproj
+++ b/TeamAlumniNETBackend/TeamAlumniNETBackend.csproj
@@ -6,11 +6,14 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
+		<UserSecretsId>79b92727-925a-4ded-9103-ca02044b810d</UserSecretsId>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.14" />
+		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.14" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.14">
 			<PrivateAssets>all</PrivateAssets>
