:sparkles: Added some DTO action

--- a/TeamAlumniNETBackend/TeamAlumniNETBackend.csproj
+++ b/TeamAlumniNETBackend/TeamAlumniNETBackend.csproj
@@ -9,6 +9,10 @@
 		<UserSecretsId>79b92727-925a-4ded-9103-ca02044b810d</UserSecretsId>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <Optimize>True</Optimize>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.1" />
